[project]
name = "CLEANSER"
authors = [
    { name = "Siyan Liu", email = "siyan.liu432@duke.edu" },
    { name = "Bill Majoros", email = "william.majoros@duke.edu" },
]
description = "Crispr Library Evaluation and Ambient Noise Suppression for Enhanced scRNA-seq"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["cmdstanpy ==1.2.0"]
version = "1.0"
keywords = ["scRNA-seq", "bioinformatics"]

[project.scripts]
cleanser = "cleanser.run:run_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cleanser = ["*.stan"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]

[tool.black]
line-length = 120
